--- a/pages/los-roques.html
+++ b/pages/los-roques.html
@@ -8,21 +8,9 @@
     <title>Los Roques</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <style>
-            header {
-            background-image: url(../assets/img/headerLosRoquesboat.png);
-            background-size: cover;
-            background-position: center;
-            height: 1024px;
-            color: white;
-            text-align: right;
-            padding-top: 0px;
-            margin: 0;
-        }
-    </style>
 </head>
 <body>
-  <header>
+  <header class="header-roques">
     <div class="nav-container">
       <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
           <div class="container-fluid">
@@ -33,9 +21,9 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
               <a class="nav-link" href="../pages/canaima.html">Canaima</a>
-              <a class="nav-link" href="#">Los Roques</a>
+              <a class="nav-link active" aria-current="page"  href="#">Los Roques</a>
               <a class="nav-link" href="../pages/morrocoy.html">Morrocoy</a>
               <a class="nav-link" href="../pages/pico-bolivar.html">Pico Bólivar</a>
               </div>
@@ -83,7 +71,7 @@
                         <br>
                         Relájate en las mejores playas del archipiélago, como la paradisíaca Cayo de Agua, con sus arenas 
                         blancas y aguas tranquilas, o la tranquila Madrisquí, perfecta para tomar el sol y disfrutar de un día de playa en 
-                        completa serenidad.
+                        completa serenidad. Otros atractivos turísticos son la festividad de la Virgen del Valle, anualmente en la segunda semana de septiembre, y el Festival de la Langosta en noviembre, cuando comienza la temporada de pesca.
                         <br>
                         <br>
                         Con su combinación perfecta de actividades deportivas, clima tropical y playas espectaculares, el 
@@ -98,19 +86,19 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../assets/img/LosRoquespueblo.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/LosRoquespueblo.jpg" class="d-block w-100" alt="Playa del plueblo El Gran Roques">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Pueblo costero en los Roques</h5>
+                      <h5>Costa del Gran Roque</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../assets/img/slideRoques2.png" class="d-block w-100" alt="...">
+                    <img src="../assets/img/slideRoques2.png" class="d-block w-100" alt="Deportista practicando windsurf en Los Roques">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Windsurf en Los Roques</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../assets/img/slideRoques3.png" class="d-block w-100" alt="...">
+                    <img src="../assets/img/slideRoques3.png" class="d-block w-100" alt="Imagen aerea del Archipielago Los Roques">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Arhipielago de Los Roques</h5>
                     </div>
@@ -130,7 +118,7 @@
     <footer>
         <nav class="footerStyle">
             <ul>
-                <li>Contacto</li>
+                <li><a href="./contacto.html">Contacto</a></li>
                 <li>Nosotros</li>
                 <li>Copyright</li>
                 <li><a href="https://www.instagram.com/" target="_blank">
