--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
     <title>Descubre Venezuela</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <style>
-        header {
-            background-image: url(./assets/img/playa-index.png);
-            background-size: cover;
-            background-position: center;
-            height: 1024px;
-            color: white;
-            padding-top: 0px;
-            margin: 0;
-        }
-    </style>
 </head>
 <body>
-    <header>
+    <header class="header-index">
         <div class="nav-container">
             <nav class="navbar navbar-expand-lg shadow" data-bs-theme="dark">
                 <div class="container-fluid">
