--- a/pages/canaima.html
+++ b/pages/canaima.html
@@ -8,21 +8,9 @@
     <title>Canaima</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <style>
-      header {
-        background-image: url(../assets/img/headerCanaima2.jpg);
-        background-size: cover;
-        background-position: center;
-        height: 1024px;
-        color: white;
-        text-align: right;
-        padding-top: 0px;
-        margin: 0;
-        }
-    </style>
 </head>
 <body>
-    <header>
+    <header class="header-canaima">
       <div class="nav-container">
         <nav class="navbar navbar-expand-lg shadow" data-bs-theme="light">
             <div class="container-fluid">
@@ -33,8 +21,8 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                <a class="nav-link" href="#">Canaima</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page"  href="#">Canaima</a>
                 <a class="nav-link" href="../pages/los-roques.html">Los Roques</a>
                 <a class="nav-link" href="../pages/morrocoy.html">Morrocoy</a>
                 <a class="nav-link" href="../pages/pico-bolivar.html">Pico Bólivar</a>
